# GnomeCodexBar

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  VERSIONLOG.md  claude_token_refresh.sh  metadata.json  package.json  pyproject.toml
.github/workflows/: publish-gnome-extension.yml
docs/: architecture.md  json-schema.md  testing.md
extension/: dev.sh  extension.js  metadata.json  prefs.js  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.usage-tui.gschema.xml
lib/: provider-utils.js
plans/: Gnome.plan.md
schemas/: org.gnome.shell.extensions.gnome-codexbar.gschema.xml
scripts/: dev-loop.sh
src/: cli.js  extension.js  indicator.js  menu.js  prefs.js  stylesheet.css
tests/: provider-utils.test.js
usage_tui/: cli.py  config.py
usage_tui/providers/: copilot.py  openrouter.py
