[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usage-tui"
version = "0.1.1"
description = "Multi-provider usage metrics TUI for Claude, OpenAI, and GitHub Copilot"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["tui", "usage", "metrics", "claude", "openai", "copilot"]
authors = [
    { name = "GnomeCodexBar" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
usage-tui = "usage_tui.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["usage_tui"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
